# libswf

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build.bat  cachestream.cpp  cachestream.h  conanfile.txt  context.cpp  decompress.cpp  decompress.h  filestream.cpp  filestream.h  main.cpp  push_all_files.sh  push_fix2.sh  push_fixes.sh  push_to_dev.sh  push_to_github.sh  stream.cpp  stream.h  swf.cpp  swf.h  swf_parser.py  tag.cpp  tag.h  tagdefine.h  test.swf
.github/workflows/: cmake-single-platform.yml
actions/: actions.cpp  actions.h
conan/: conan_install_all.cmd
conan/profiles/: win-x86-static-release-2017
datatype/: datatype.h
docs/: RENDERER_ABSTRACTION.md
filter/: filter.h
gradients/: gradients.h
include/audio/: audio_player.h
include/avm2/: avm2.h  avm2_renderer_bridge.h
include/common/: bitstream.h  gdiplus_fix.h  profiler.h  types.h
include/parser/: swfheader.h  swfparser.h  swftag.h
include/renderer/: cairo_backend.h  gdiplus_backend.h  irenderer.h  render_backend.h  renderer.h  software_backend.h  unified_renderer.h
include/writer/: swfwriter.h
samples/: CMakeLists.txt  as3_test.cpp  debug_swf.cpp  filter_blend_test.cpp  graphics_api_test.cpp  image_buffer_test.cpp  profile_test.cpp  renderer_abstraction_demo.cpp  software_renderer_test.cpp  swf_create_test.cpp  swf_extract.cpp  swf_info.cpp  swf_viewer.cpp
shapes/: shapes.h
src/audio/: audio_player.cpp
src/avm2/: avm2.cpp
src/parser/: swfheader.cpp  swfparser.cpp
src/renderer/: cairo_backend.cpp  gdiplus_backend.cpp  renderer.cpp  software_backend.cpp  unified_renderer.cpp
src/writer/: swfwriter.cpp
tags/: controltag.cpp  controltag.h  definescalinggridtag.cpp  definescalinggridtag.h  definesceneandframelabeldatatag.cpp  definesceneandframelabeldatatag.h  definetag.cpp  definetag.h  enabledebugger2tag.cpp  enabledebugger2tag.h  enabledebuggertag.cpp  enabledebuggertag.h  endtag.cpp  endtag.h  exportassetstag.cpp  exportassetstag.h  fileattributestag.cpp  fileattributestag.h  framelabeltag.cpp  framelabeltag.h  importassets2tag.cpp  importassets2tag.h  importassetstag.cpp  importassetstag.h  metadatatag.cpp  metadatatag.h  placeobject2tag.cpp  placeobject2tag.h  placeobject3tag.h  placeobjecttag.cpp  placeobjecttag.h  protecttag.cpp  protecttag.h  removeobject2tag.h  removeobjecttag.h  scriptlimitstag.cpp  scriptlimitstag.h  setbackgroundcolortag.cpp  setbackgroundcolortag.h  settabindextag.cpp  (+6 more)
tests/: CMakeLists.txt  test_avm2.cpp  test_compression.cpp  test_parser.cpp  test_renderer.cpp  test_runner.cpp
workspace/swf/: README.md
workspace/swf/samples/: swf_optimizer.cpp
workspace/swf/src/audio/: audio_player.cpp
workspace/swf/src/avm2/: avm2_renderer_bridge.cpp
